# kup

./: .gitignore  README.md  client.go  client_test.go  config.go  go.sum  handler.go  interop_csharp_test.go  server.go  server_bench_test.go  session.go  ukcp_test.go
cpp/ukcp_server/: .clang-format  CMakeLists.txt
cpp/ukcp_server/bench/: run_perf_case.sh
cpp/ukcp_server/bench/perf_client/: main.cpp
cpp/ukcp_server/bench/perf_server/: main.cpp
cpp/ukcp_server/bench/windows_perf/: main.cpp
cpp/ukcp_server/examples/echo/: main.cpp
cpp/ukcp_server/include/ukcp/: client.hpp  config.hpp  handler.hpp  protocol.hpp  server.hpp  session.hpp
cpp/ukcp_server/src/: client.cpp  kcp_limits.hpp  platform_poller.cpp  platform_poller_linux.cpp  platform_poller_windows.cpp  platform_select.cpp  platform_socket.cpp  platform_socket.hpp  platform_socket_common.cpp  platform_socket_linux.cpp  platform_socket_windows.cpp  protocol.cpp  quiescence.hpp  server.cpp  server_internal.hpp  server_lifecycle.cpp  server_receive.cpp  server_send.cpp  server_update.cpp  session.cpp  test_framework.hpp
cpp/ukcp_server/tests/: client_test.cpp  echo_test.cpp  interop_csharp_test.cpp  protocol_test.cpp  quiescence_test.cpp  server_test.cpp  session_layout_test.cpp  split_perf_test.cpp  test_main.cpp  test_support.hpp
csharp/: UkcpSharp.slnx
csharp/UkcpSharp/: IDatagramSocket.cs  SocketDatagramSocket.cs  UkcpClient.cs  UkcpClientConfig.cs  UkcpSharp.csproj
csharp/UkcpSharp.Console/: Program.cs  UkcpSharp.Console.csproj
csharp/UkcpSharp.Tests/: UkcpClientTests.cs  UkcpHeaderTests.cs  UkcpSharp.Tests.csproj
docs/plans/: 2026-03-19-ukcp-cpp-server-design.md  2026-03-19-ukcp-cpp-server.md  2026-03-19-ukcp-echo-design.md  2026-03-19-ukcp-echo.md  2026-03-19-ukcp-fast-reconnect.md  2026-03-19-ukcp-header-design.md  2026-03-19-ukcp-header.md  2026-03-19-ukcp-network-design.md  2026-03-19-ukcp-network.md  2026-03-19-ukcp-server-perf-design.md  2026-03-19-ukcp-server-perf.md  2026-03-19-ukcpsharp-design.md  2026-03-19-ukcpsharp.md  2026-03-20-active-kcp-quiescence.md  2026-03-20-ukcp-cpp-connected-udp-io-uring-design.md  2026-03-20-ukcp-cpp-connected-udp-io-uring.md  2026-03-20-ukcp-cpp-room-perf-design.md  2026-03-20-ukcp-cpp-room-perf.md  2026-03-20-ukcp-cpp-split-perf-design.md  2026-03-20-ukcp-cpp-split-perf.md  2026-03-20-ukcp-cpp-windows-perf-design.md  2026-03-20-ukcp-cpp-windows-perf.md  2026-03-23-ukcp-cpp-platform-split.md  2026-03-23-ukcp-cpp-slimming-design.md  2026-03-23-ukcp-cpp-slimming.md  2026-03-23-ukcp-cpp-style-normalization.md  2026-03-25-ukcp-client.md
examples/echo/: echo_test.go  main.go
golang/: README.md  client.go  client_test.go  config.go  dedupe.go  go.mod  interop_csharp_test.go  limits.go  server.go  server_bench_test.go  session.go  ukcp_test.go
golang/protocol/: header.go  (+1 more)
protocol/: header.go
(+7 files in other folders)
